   - AccountSelect, OpeTemplateSelect: save settings before hiding the dialog.
   - BalanceRender: improve appearance of header notes (todo #1191).
   - BalanceRender: improve columns titles (todo #1193).
   - DossierManager: disable open/delete actions on opened dossier (todo #1183).
   - DossierTreeview: disable columns depending of the filter (todo #1185).
   - EntryPage: takes advantage of ofaITVColumnable and companion interfaces (todo #1182). 
   - OpeTemplate: make the treeview sortable (todo #1200).
   - Reconciliation: improve display and automated proposals.
   - ReconciliationRender: add debit and credit soldes, change back summary color (todo #1195).
   - RecurrentModel: allow to be duplicated (todo #1206).
   - RecurrentModel: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - RecurrentNew: managed as a singleton (todo #1213).
   - RecurrentRun: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - RecurrentRun: no more generate a warning on empty entries (todo #1177).
   - SettlementPage: takes advantage of new display facilities.
   - TVAForm: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - TVARecord: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - Improve formulas updates (todo #1214).

 Bug fixes:

   - AccountSelect: close the window on account selection (todo #1187).
   - BatlineTreeview: fix columns visibility change (todo #1219).
   - IPrintable: does not say "succesfully printed" when cancelled (todo #1188).
   - ITreeAdder: fix columns adding (todo #1190).
   - LedgerClose: fix typo.
   - OpeTemplatePage: fix row activation.
   - OpeTemplateSelect: fix missing getter.
   - OpeTemplateStore: fix row insertion (todo #1189).
   - PeriodClose: fix the 'archive accounts' user preference (todo #1205).
   - RecurrentModel: fix update on OpeTemplate mnemmonic modification (todo #1203).